--- a/PROGPOEst10439216.csproj
+++ b/PROGPOEst10439216.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Coordinator\" />
+  </ItemGroup>
+
 </Project>
